--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.399.0",
     "next": "14.2.4",
+    "next-qrcode": "^2.5.1",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
