I need to fix UX experience :(

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-magic-motion": "^1.1.2",
+    "react-parallax-tilt": "^1.7.232",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
