added animated loding

--- a/.github/workflows/run-vps.yml
+++ b/.github/workflows/run-vps.yml
@@ -2,27 +2,28 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "master" ]
+    branches: ["master"]
 
 jobs:
   build:
-
     runs-on: self-hosted
 
     env:
-      NEXT_PUBLIC_BACKEND_URL : ${{secrets.NEXT_PUBLIC_BACKEND_URL}}
+      NEXT_PUBLIC_BACKEND_URL: ${{secrets.NEXT_PUBLIC_BACKEND_URL}}
 
     strategy:
       matrix:
         node-version: [18.19.1]
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-
+      - uses: actions/checkout@v4
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "npm"
+      - run: npm ci
+      - run: npm run build --if-present
+      - name: Change Directory
+        run: cd /home/moncef/actions-runner/_work/basseer-internship-web-app/basseer-internship-web-app
+      - run: pm2 restart 0
