--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "jose": "^5.6.3",
     "lucide-react": "^0.399.0",
     "next": "14.2.4",
     "next-qrcode": "^2.5.1",
@@ -35,6 +36,7 @@
     "react-magic-motion": "^1.1.2",
     "react-parallax-tilt": "^1.7.232",
     "react-phone-number-input": "^3.4.5",
+    "react-qrcode-logo": "^3.0.0",
     "sharp": "^0.33.4",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
