--- a/.github/workflows/publish-to-ghcr.yml
+++ b/.github/workflows/publish-to-ghcr.yml
@@ -12,9 +12,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Log in to GitHub Container Registry
-        run: docker login ghcr.io -u ${{ github.actor }} -p ${{ secrets.GH_PAT }}
+        run: echo "${{ secrets.GH_PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
       - name: Build and push the Docker image
         run: |
-          docker build . --tag ghcr.io/moncefme/basseer-teaboy-frontend:latest \
+          docker build -t ghcr.io/moncefme/basseer-teaboy-frontend:latest .
           docker push ghcr.io/moncefme/basseer-teaboy-frontend:latest
