--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "framer-motion": "^11.3.28",
     "jose": "^5.6.3",
     "lucide-react": "^0.399.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.4",
     "next-qrcode": "^2.5.1",
     "next-themes": "^0.3.0",
@@ -39,7 +41,7 @@
     "react-qrcode-logo": "^3.0.0",
     "sharp": "^0.33.4",
     "sonner": "^1.5.0",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
     "zod": "^3.23.8",
