--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lucide-react": "^0.399.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.4",
+    "next-cloudinary": "^6.10.0",
     "next-qrcode": "^2.5.1",
     "next-themes": "^0.3.0",
     "react": "^18",
