--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@iconify-icon/react": "^2.1.0",
+    "@iconify/react": "^4.1.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
