--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@uidotdev/usehooks": "^2.4.1",
     "class-variance-authority": "^0.7.0",
@@ -41,6 +42,7 @@
     "react-parallax-tilt": "^1.7.232",
     "react-phone-number-input": "^3.4.5",
     "react-qrcode-logo": "^3.0.0",
+    "react-share": "^5.1.0",
     "sharp": "^0.33.4",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
