--- a/package.json
+++ b/package.json
@@ -27,17 +27,21 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "framer-motion": "^11.3.28",
+    "i18next": "^23.15.2",
+    "i18next-browser-languagedetector": "^8.0.0",
     "jose": "^5.6.3",
     "lucide-react": "^0.399.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.4",
     "next-cloudinary": "^6.10.0",
+    "next-i18next": "^15.3.1",
     "next-qrcode": "^2.5.1",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.1",
+    "react-i18next": "^15.0.2",
     "react-magic-motion": "^1.1.2",
     "react-parallax-tilt": "^1.7.232",
     "react-phone-number-input": "^3.4.5",
