--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.1",
     "react-i18next": "^15.0.2",
+    "react-icons": "^5.4.0",
     "react-magic-motion": "^1.1.2",
     "react-parallax-tilt": "^1.7.232",
     "react-phone-number-input": "^3.4.5",
